项目第五天，登录、注册、商品详情页、加入购物车基本功能已实现

--- a/css/cart.css
+++ b/css/cart.css
@@ -219,7 +219,11 @@
 }
 
 .cart-goods-list .col-check {
-    width: 110px;
+    width: 70px;
+    padding-left: 40px;
+}
+.cart-goods-list .col-check span{
+    margin-left: 10px;
 }
 
 .cart-goods-list .col-check .icon-checkbox {
@@ -732,6 +736,9 @@
     margin-right: 15px;
 }
 
+.placeholder-div{
+    margin: 20px 0;
+}
 .cart-bar {
     height: 50px;
     text-align: right;
