--- a/css/getbuy.css
+++ b/css/getbuy.css
@@ -337,10 +337,6 @@
 
 /* 中部导航栏 */
 
-.box-big {
-    width: 100%;
-    height: 600px;
-}
 
 .getbuy-middle {
     width: 100%;
@@ -357,7 +353,7 @@
     margin-right: 13px;
 }
 .getbuy-middle ul{
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
 /* 轮播图 */
@@ -390,43 +386,42 @@ hmtl {
     float: left;
 }
 #loupe .pic{
-    width: 250px;
+    width: 400px;
     height: 400px;
-    margin-left: 100px;
     margin-top: 20px;
+    margin-left: 40px;
     position: relative;
 }
 #loupe .pic img{
-    width: 250px;
+    width: 400px;
     height: 400px;
 }
 #loupe ul{
-    margin-left: 20px;
     margin-top: 60px;
 }
 #loupe ul li{
-    height: 100px;
-    width: 62px;
-    margin-right: 30px;
+    height: 80px;
+    width: 80px;
+    margin-right: 20px;
     float: left;
     cursor: pointer;
 }
 #loupe ul li img{
-    width: 62px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
 
 }
 #big{
-    width: 250px;
+    width: 400px;
     height: 400px;
     position: absolute;
     top: 20px;
-    left: 400px;
+    left: 450px;
     overflow: hidden;
     display: none;
 }
 #big img{
-    width: 500px;
+    width: 800px;
     height: 800px;
     position: absolute;
 }
@@ -434,10 +429,10 @@ hmtl {
     position: relative;
 }
 #loupe .mouse{
-    width: 125px;
+    width: 200px;
     height: 200px;
     position: absolute;
-    background-color: #666666;
+    background-color: skyblue;
     opacity: 0.3;
     display: none;
 }
@@ -621,12 +616,13 @@ h2 {
 /* 轮播图的右边 */
 
 .getbuy-middle-right {
-    width: 611px;
+    width: 600px;
     height: 600px;
     margin-left: 600px;
 }
 
 .getbuy-middle-box1 {
+    margin-top: 15px;
     width: 539px;
     height: 228px;
     margin-left: 62px;
@@ -635,14 +631,14 @@ h2 {
 }
 
 .getbuy-middle-box1 h3 {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 500;
     margin-bottom: 10px;
 }
 
 .getbuy-middle-box1 p {
     font-size: 12px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .getbuy-middle-box1 em {
@@ -650,7 +646,9 @@ h2 {
     color: #ff6700;
     margin-bottom: 10px;
 }
-
+.getbuy-middle-box1 .goodPrice{
+    font-size: 40px;
+}
 .getbuy-middle-box2 {
     width: 563px;
     height: 140px;
