--- a/XiaomiMall/css/register.css
+++ b/XiaomiMall/css/register.css
@@ -89,17 +89,6 @@
     width: 390px;
     height: 30px;
     margin-left: 10px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    text-indent: 1em;
-}
-
-.txt2 {
-    width: 390px;
-    height: 30px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    margin-top: 10px;
     text-indent: 1em;
 }
 
@@ -107,12 +96,21 @@
     width: 392px;
     height: 41px;
     background-color: #ff6700;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 10px;
     border: 0;
     color: #ffffff;
 }
-
+.tips{
+    height: 30px;
+    margin-left: 10px;
+    font-size: 13px;
+    color: red;
+    visibility:hidden;
+}
+.block{
+    visibility: visible;
+}
 .login-btn a {
     display: block;
     text-align: center;
